<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_graph"
            app:startDestination="@id/MainFragment">

    <fragment
            android:id="@+id/MainFragment"
            android:name="cn.xiaowine.romtools.fragment.MainFragment"
            android:label="@string/main_fragment_label"
            tools:layout="@layout/fragment_main">
        <action
                android:id="@+id/action_MainFragment_to_RootFragment"
                app:destination="@id/RootFragment"
                app:enterAnim="@anim/slide_go_in"
                app:exitAnim="@anim/slide_go_out"
                app:popEnterAnim="@anim/slide_left_in"
                app:popExitAnim="@anim/slide_left_out"/>
        <action
                android:id="@+id/action_MainFragment_to_BootFragment"
                app:destination="@id/BootFragment"
                app:enterAnim="@anim/slide_go_in"
                app:exitAnim="@anim/slide_go_out"
                app:popEnterAnim="@anim/slide_left_in"
                app:popExitAnim="@anim/slide_left_out"/>
        <action
                android:id="@+id/action_MainFragment_to_RecFragment"
                app:destination="@id/RecFragment"
                app:enterAnim="@anim/slide_go_in"
                app:exitAnim="@anim/slide_go_out"
                app:popEnterAnim="@anim/slide_left_in"
                app:popExitAnim="@anim/slide_left_out"/>
        <action
                android:id="@+id/action_MainFragment_to_LogoFragment"
                app:destination="@id/LogoFragment"
                app:enterAnim="@anim/slide_go_in"
                app:exitAnim="@anim/slide_go_out"
                app:popEnterAnim="@anim/slide_left_in"
                app:popExitAnim="@anim/slide_left_out"/>

    </fragment>
    <fragment
            android:id="@+id/RootFragment"
            android:name="cn.xiaowine.romtools.fragment.RootFragment"
            android:label="@string/root">
    </fragment>
    <fragment
            android:id="@+id/BootFragment"
            android:name="cn.xiaowine.romtools.fragment.BootFragment"
            android:label="@string/boot">
    </fragment>
    <fragment
            android:id="@+id/RecFragment"
            android:name="cn.xiaowine.romtools.fragment.RecFragment"
            android:label="@string/recovery">
    </fragment>
    <fragment
            android:id="@+id/LogoFragment"
            android:name="cn.xiaowine.romtools.fragment.LogoFragment"
            android:label="@string/logo">
    </fragment>
</navigation>