<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/constraintLayout_margin">

        <androidx.cardview.widget.CardView
                android:id="@+id/card_view_root"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                card_view:cardBackgroundColor="@android:color/transparent"
                card_view:cardCornerRadius="0dp"
                card_view:cardElevation="0dp"
                card_view:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/card_vertical_margin">

            <Button
                    android:text="@string/root"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/roots"
                    card_view:cornerRadius="@dimen/card_view_cornerRadius"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:id="@+id/card_view_recovery"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                card_view:cardBackgroundColor="@android:color/transparent"
                card_view:cardCornerRadius="0dp"
                card_view:cardElevation="0dp"
                card_view:layout_constraintTop_toBottomOf="@id/card_view_root"
                android:layout_marginTop="@dimen/card_vertical_margin">

            <Button
                    android:text="@string/recovery"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/recovery"
                    card_view:cornerRadius="@dimen/card_view_cornerRadius"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:id="@+id/card_view_boot"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                card_view:cardBackgroundColor="@android:color/transparent"
                card_view:cardCornerRadius="0dp"
                card_view:cardElevation="0dp"
                card_view:layout_constraintTop_toBottomOf="@+id/card_view_recovery"
                android:layout_marginTop="@dimen/card_vertical_margin">

            <Button
                    android:text="@string/boot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/boot"
                    card_view:cornerRadius="@dimen/card_view_cornerRadius"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:id="@+id/card_view_logo"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                card_view:cardBackgroundColor="@android:color/transparent"
                card_view:cardCornerRadius="0dp"
                card_view:cardElevation="0dp"
                card_view:layout_constraintTop_toBottomOf="@+id/card_view_boot"
                android:layout_marginTop="@dimen/card_vertical_margin">

            <Button
                    android:text="@string/logo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/logo"
                    card_view:cornerRadius="@dimen/card_view_cornerRadius"/>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>